[package]
name = "call_me_maybe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
openapi = { version = "1.34.0", path = "twilio-rust" }
tokio = { version = "1.21.0", features = ["full"] }
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"